# flask_app

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.py  gunicorn.conf.py  main.py  pyproject.toml  render.yaml  wsgi.py
.github/workflows/: auto-format.yml  ci.yml
app/: __init__.py  routes.py
app/static/css/: styles.css
app/static/js/: main.js
app/templates/: base.html  index.html
instance/: .gitignore  config.py.example
