[project]
name = "flask-app"
version = "0.1.0"
description = "Basic Flask app scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "gunicorn>=22.0",
    "load-dotenv>=0.1.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
preview = true
# uv will automatically use the local .venv and pyproject for dependency resolution

[tool.uv.scripts]
# Convenience commands for running the app with Gunicorn
serve = "gunicorn -c gunicorn.conf.py wsgi:app"
serve-dev = "gunicorn --reload --bind 127.0.0.1:8000 wsgi:app"

[tool.setuptools.packages.find]
# Only include the actual application package; exclude the instance config directory
include = ["app*"]
exclude = ["instance*"]

[tool.ruff]
# Enforce rules against broad exception clauses and bare excepts.
# - BLE001: Do not catch blind/broad exceptions (from flake8-blind-except)
# - E722: Do not use bare 'except'
extend-select = ["BLE", "E722"]
