[project]
name = "flask-app"
version = "0.1.0"
description = "Basic Flask app scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "gunicorn>=22.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
preview = true
# uv will automatically use the local .venv and pyproject for dependency resolution


[tool.setuptools.packages.find]
# Only include the actual application package; exclude the instance config directory
include = ["app*"]
exclude = ["instance*"]

[tool.setuptools.package-data]
# Ensure templates and static assets are included in source/wheel distributions
app = [
  "templates/**/*.html",
  "static/**/*",
]

[tool.setuptools]
# Include package data from the app package in built distributions
include-package-data = true

[tool.ruff]
# Enforce rules against broad exception clauses and bare excepts.
# - BLE001: Do not catch blind/broad exceptions (from flake8-blind-except)
# - E722: Do not use bare 'except'
extend-select = ["BLE", "E722"]
